# umar

./: CMakeLists.txt  README.org  blake.cl  equihash.cl  main.cpp
